--- a/style_board/styles/globals.css
+++ b/style_board/styles/globals.css
@@ -17,14 +17,15 @@
 }
 
 body {
-  /* color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  background-color: ;
+   /* color: rgb(var(--foreground-rgb)); */
+  /*background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
-    padding: 10px;
+    padding: 15px;
 }
 
 @layer utilities {
